--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Project-4: Technical Documentation</title>
+  <title>SYSTEMONE DOCUMENTATION</title>
+	<!-- production version, optimized for size and speed -->
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <style>
  #main-doc{
        display:flex;
