--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- production version, optimized for size and speed -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 <body>
-	
+	docs 
 
 </body>
 </html>
