--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2" src="assets/images/coderdocs-logo.svg" alt="logo"><span class="logo-text">Systemone<span class="text-alt">Docs</span></span></a></div>    
+	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2" src="http://linenradar.systemoneltd.com/img/ourlogo.png" alt="logo"><span class="logo-text">Systemone<span class="text-alt">Docs</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
@@ -68,12 +68,12 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-map-signs"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Introduction</span>
+							        <span class="card-title-text">Human REsource</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 							    </div>
-							    <a class="card-link-mask" href="docs-page.html#section-1"></a>
+							    <a class="card-link-mask" href="hr.html#section-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -84,7 +84,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-arrow-down"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Installation</span>
+							        <span class="card-title-text">Payroll </span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
