--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
 		    <h3 class="mb-2 text-white mb-3">Launch Your Software</h3>
-		    <div class="section-intro text-white mb-3 single-col-max mx-auto">Want to launch your software project and start getting traction from your target users? Check out our premium <a class="text-white" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/coderpro-bootstrap-4-startup-template-for-software-projects/">Bootstrap 4 startup template CoderPro</a>! It has everything you need to promote your product.</div>
+		    <div class="section-intro text-white mb-3 single-col-max mx-auto">
+				Campuscura Cloud Testing
+			</div>
+
 		   
 	    </div>
     </section><!--//cta-section-->
