--- a/hr.html
+++ b/hr.html
@@ -83,8 +83,10 @@
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Introduction <span class="docs-time">Last updated: 2019-06-01</span></h1>
 					    <section class="docs-intro">
-						    <p>Section intro goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus condimentum nisl id vulputate. Praesent aliquet varius eros interdum suscipit. Donec eu purus sed nibh convallis bibendum quis vitae turpis. Duis vestibulum diam lorem, vitae dapibus nibh facilisis a. Fusce in malesuada odio.</p>
-						</section><!--//docs-intro-->
+						    <p>Many payroll activities are related to HR issues so the payroll and human resources departments must coordinate shared functions. This includes recruitment, salary increases, bonus payments, benefit deductions, vacation leaves and firing employees. The human resources department must be sensitive to the time devoted to payroll processing because as the champion of employee relations, they’ll face issues directly if paychecks aren’t processed correctly and on time.
+
+The payroll and HR departments are also privy to confidential employee data, including financial information, social security numbers and home addresses. The two departments must work together to ensure that this information doesn’t fall prey to unauthorized individuals or companies.</p>
+					    </section><!--//docs-intro-->
 						
 						<h5>Github Code Example:</h5>
 						<p>You can <a class="theme-link" href="https://gist.github.com/"  target="_blank">embed your code snippets using Github gists</a></p>
