--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 							    </div>
-							    <a class="card-link-mask" href="hr.html#section-1"></a>
+							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -89,7 +89,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
 							    </div>
-							    <a class="card-link-mask" href="hr.html#section-2"></a>
+							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -107,7 +107,7 @@
 								    Campuscura Hostel Online Reservation Service is one Quick way to book your Accomodation in any institution using our Online Services.
 								    
 							    </div>
-							    <a class="card-link-mask" href="hostel.html#section-2"></a>
+							    <a class="card-link-mask" href="hostel.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -138,7 +138,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#section-3"></a>
+							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -154,7 +154,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#section-4"></a>
+							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -174,7 +174,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#section-9"></a>
+							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
