--- a/hostel.html
+++ b/hostel.html
@@ -32,12 +32,15 @@
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-					<button id="docs-sidebar-toggler" class="docs-sidebar-toggler docs-sidebar-visible mr-2 d-xl-none" type="button">
+		<button id="docs-sidebar-toggler" class="docs-sidebar-toggler docs-sidebar-visible mr-2 d-xl-none" type="button">
 	                    <span></span>
 	                    <span></span>
 	                    <span></span>
 	                </button>
-	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text"><span class="text-alt">Docs</span></span></a></div>    
+	                <div class="site-logo">
+				<a class="navbar-brand" href="index.html">
+					<img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text">
+					<span class="text-alt">Hostel Reservation Docs</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	                <div class="top-search-box d-none d-lg-flex">
@@ -58,6 +61,30 @@
         </div><!--//branding-->
     </header><!--//header-->
     
+	
+	
+	
+	
+	<div class="page-header theme-bg-dark py-5 text-center position-relative">
+	    <div class="theme-bg-shapes-right"></div>
+	    <div class="theme-bg-shapes-left"></div>
+	    <div class="container">
+	    <h1 class="page-heading single-col-max mx-auto">Human Resource Documentation</h1>
+	   <div class="page-intro single-col-max mx-auto"></div>
+	   <div class="main-search-box pt-3 d-block mx-auto">
+           <form class="search-form w-100">
+	<input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
+		    <button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search"></i></button>
+		        </form>
+             </div>
+	    </div>
+	
+	
+	
+	
+	
+	
+	
     <div class="docs-wrapper">
 	    <div id="docs-sidebar" class="docs-sidebar">
 		    <div class="top-search-box d-lg-none p-3">
