--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								    Campuscura Hostel Online Reservation Service is one Quick way to book your Accomodation in any institution using our Online Services.
 								    
 							    </div>
-							    <a class="card-link-mask" href="hostel.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hostel.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
