--- a/hostel.html
+++ b/hostel.html
@@ -97,7 +97,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-		    <h1 class="page-heading single-col-max mx-auto">Human Resource Documentation</h1>
+		    <h1 class="page-heading single-col-max mx-auto">Hostel Online Reservation Guide</h1>
 		   <div class="page-intro single-col-max mx-auto"></div>
 	   <div class="main-search-box pt-3 d-block mx-auto">
            	<form class="search-form w-100">
