--- a/hostel.html
+++ b/hostel.html
@@ -46,7 +46,8 @@
 	                <div class="top-search-box d-none d-lg-flex">
 		                <form class="search-form">
 				            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
-				            <button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search"></i></button>
+				            <button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search">
+                    </i></button>
 				        </form>
 	                </div>
 	
@@ -83,10 +84,11 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
 				    <li class="nav-item section-title"><a class="nav-link scrollto active" href="#section-1"><span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Introduction</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-1">1.1 Establishment</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Employee Recruitment</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Employee's Records</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 Training and Staff Development</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-1">1.1 Login</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Select Hostel</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Select a Bed</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 Save your Reservation</a></li>
+            <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.4 Confirm Your Reservation</a></li>
 				   </ul>
 
 		    </nav><!--//docs-nav-->
