--- a/hostel.html
+++ b/hostel.html
@@ -40,7 +40,7 @@
 	                <div class="site-logo">
 				<a class="navbar-brand" href="index.html">
 					<img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text">
-					<span class="text-alt">Hostel Reservation Docs</span></span></a></div>    
+					<span class="text-alt">Docs</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	                <div class="top-search-box d-none d-lg-flex">
