--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							    <div class="card-text">
 								    Students need to make sure they register units every term.
 							    </div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="studentunitsregistration.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
