--- a/studentunitsregistration.html
+++ b/studentunitsregistration.html
@@ -163,7 +163,7 @@ The payroll and HR departments are also privy to confidential employee data, inc
 						
 					</section><!--//section-->
 					<section class="docs-section" id="item-1-5">
-						<h2 class="section-heading">Section Item 1.5</h2>
+						<h2 class="section-heading">Confirm Units And Register</h2>
 						<p>Vivamus efficitur fringilla ullamcorper. Cras condimentum condimentum mauris, vitae facilisis leo. Aliquam sagittis purus nisi, at commodo augue convallis id. Sed interdum turpis quis felis bibendum imperdiet. Mauris pellentesque urna eu leo gravida iaculis. In fringilla odio in felis ultricies porttitor. Donec at purus libero. Vestibulum libero orci, commodo nec arcu sit amet, commodo sollicitudin est. Vestibulum ultricies malesuada tempor.</p>
 					</section><!--//section-->
 					<section class="docs-section" id="item-1-6">
