--- a/studentunitsregistration.html
+++ b/studentunitsregistration.html
@@ -96,7 +96,7 @@
 						<h2 class="section-heading">Login</h2>
 					<div class="d-flex flex-row">
 						<div class="p-2">
-						  <img src="assets/images/features/Slide1.PNG"/>
+						  <img src="assets/images/features/Slide1.PNG" class="img-responsive"/>
 						</div>
 					  
 					    </div>
