--- a/hostel.html
+++ b/hostel.html
@@ -71,10 +71,12 @@
 				    <li class="nav-item section-title"><a class="nav-link scrollto active" href="#section-1">
 					    <span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Introduction</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-1">1.1 Login</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Select Hostel </a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Select a Bed</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 Save your Reservation</a></li>
-            			     <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Confirm Your Reservation </a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Click Hostel & Cattering </a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Click Bed Booking</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 Click Bed Booking</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Save your Reservation</a></li>
+            			     <li class="nav-item"><a class="nav-link scrollto" href="#item-1-6">1.6 Click RESERVE to open Reservation FORM </a></li>
+				     <li class="nav-item"><a class="nav-link scrollto" href="#item-1-7">1.7 Confirm Your Reservation </a></li>
 				   </ul>
 
 		    </nav><!--//docs-nav-->
@@ -139,7 +141,7 @@
 					</section><!--//section-->
 					
 					<section class="docs-section" id="item-1-4">
-						<h2 class="section-heading">Select your Termly Units</h2>
+						<h2 class="section-heading">Scroll down </h2>
 						<p>Select the units your are doing </p>
 						 <img src="assets/images/hostel/Slide6.JPG" class="rounded img-fluid shadow"/>
 						
