--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-money"></i>
+								        <i class="fas fa-money-bill-wave" style="color:#f0d20f'></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Departmental Claims</span>
 							    </h5>
