--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="description" content="Bootstrap 4 Template For Software Startups">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="description" content="systemone ltd Software Startups">
+    <meta name="author" content="frankip">    
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- Google Font -->
@@ -74,9 +74,12 @@
               <span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Introduction</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-1">1.1 Login</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Click on Departmental tools</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Select your year of study and term</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 select your Termly units</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Confirm Units and Register</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Select your Department</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 select Class</a></li>
+                                    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Add Payment on votehead</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-6">1.6 Enter Amount you Want to Claim</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-7">1.7 Click ADD to add the class </a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add HOD ,Staff and Lecturers</a></li>
 				   </ul>
 
 		    </nav><!--//docs-nav-->
