--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -80,6 +80,9 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-6">1.6 Enter Amount you Want to Claim</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-7">1.7 Click ADD to add the class </a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add HOD ,Staff and Lecturers</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add HOD ,Staff and Lecturers</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add Administrative staff</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add HOD ,Staff and Lecturers</a></li>
 				   </ul>
 
 		    </nav><!--//docs-nav-->
