--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -113,7 +113,7 @@
 				    </header>
 				    <section class="docs-section" id="item-1-1">
 						<h2 class="section-heading">Login</h2>
-					 <img src="assets/images/departmetalclaims/Slide1.JPG" class="rounded img-fluid shadow"/>
+					 <img src="assets/images/departmetalclaims/login.jpg" class="rounded img-fluid shadow"/>
 
 						
 						
