--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -88,7 +88,7 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Add HOD ,Staff and Lecturers</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-9">1.9 Add Lecturers</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-10">1.10 Set TAX , RATE for Lecturers </a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-11">1.11 Print</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-11">1.11 Print Claims</a></li>
 				   </ul>
 
 		    </nav><!--//docs-nav-->
