--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 							    </div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hr.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -140,7 +140,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
 							    </div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hr.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -189,7 +189,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hr.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -205,7 +205,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hr.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -225,7 +225,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="hr.html#item-1-1"></a>
+							    <a class="card-link-mask" href="hr.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
