--- a/hostel.html
+++ b/hostel.html
@@ -161,10 +161,10 @@
 
 			    
 			    <div class="card rounded shadow">
-  <img src="assets/images/hostel/Slide18.jpg" class="rounded img-fluid" card-img-top/>
+  <img src="assets/images/hostel/Slide18.JPG" class="rounded img-fluid" card-img-top/>
   <div class="card-body">
     <h5 class="card-title">Confirm Your Reservation</h5>
-    <p class="card-text">It is good to confirm what you have done than just assuming..</p>
+    <p class="card-text">It is good to confirm what you have done than just assume..</p>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">Click on View</li>
