--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-money-bill-wave" style="color:#f0d20f"></i>
+									    <i class='fas fa-building' style='font-size:48px;color:red'></i>
+								     
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Add and Amend Departments</span>
 							    </h5>
@@ -92,7 +93,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-money-bill-wave" style="color:#f0d20f"></i>
+								       <i class='fas fa-table' style='font-size:48px;color:blue'></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Creating and Setting Programme</span>
 							    </h5>
@@ -112,7 +113,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-money-bill-wave" style="color:#f0d20f"></i>
+								        <i class="fas fa-sitemap" style="color:yellow"></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Creating and Setting Intakes/Classes</span>
 							    </h5>
