--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									    <i class='fas fa-building' style='font-size:48px;color:red'></i>
 								     
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Add and Amend Departments</span>
+							        <span class="card-title-text">Departments</span>
 							    </h5>
 							    <div class="card-text">
 								Adding and Amending Departments
@@ -95,7 +95,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								       <i class='fas fa-table' style='font-size:48px;color:blue'></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Creating and Setting Programme</span>
+							        <span class="card-title-text">Programmes</span>
 							    </h5>
 							    <div class="card-text">
 								   Creating new programmes,attatching units
@@ -115,7 +115,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-sitemap" style="color:yellow"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Creating and Setting Intakes/Classes</span>
+							        <span class="card-title-text">Intakes/Classes</span>
 							    </h5>
 							    <div class="card-text">
 								  Creating and Setting Intakes/Classes
@@ -134,7 +134,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-money-bill-wave" style="color:#f0d20f"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Units Scheduling and Lecturer Allocation</span>
+							        <span class="card-title-text">Scheduling and Allocation</span>
 							    </h5>
 							    <div class="card-text">
 								Units Scheduling and Lecturer Allocation
@@ -159,7 +159,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-map-signs"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Students Online Units Registration</span>
+							        <span class="card-title-text">Online Units Registration</span>
 							    </h5>
 							    <div class="card-text">
 								    Students need to make sure they register units every term.
