--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				    
 				    
 				     <div class="col-12 col-lg-4 py-3 shadow">
-					    <div class="card shadow-sm">
+					    <div class="card">
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
@@ -132,7 +132,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-money-bill-wave" style="color:#f0d20f"></i>
+								        <i class="fas fa-map-signs" style="color:#f0d20f"></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Scheduling and Allocation</span>
 							    </h5>
@@ -157,7 +157,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-map-signs"></i>
+								        <i class='far fa-calendar-plus' style='font-size:48px;color:red'></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Online Units Registration</span>
 							    </h5>
@@ -177,7 +177,7 @@
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
 								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-map-signs"></i>
+								        <i class="fas fa-money-bill-wave"></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Human Resource Department</span>
 							    </h5>
