--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 					    <div class="card shadow-sm">
 						    <div class="card-body">
 							    <h5 class="card-title mb-3">
-								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-sitemap" style="color:yellow"></i>
+								    <span class="theme-icon-holder card-icon-holder mr-2" style="color:yellow">
+								        <i class="fas fa-sitemap" style="color:white"></i>
 							        </span><!--//card-icon-holder-->
 							        <span class="card-title-text">Intakes/Classes</span>
 							    </h5>
