--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class='far fa-calendar-plus' style='font-size:48px;color:red'></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Online Units Registration</span>
+							        <span class="card-title-text">Units Registration</span>
 							    </h5>
 							    <div class="card-text">
 								    Students need to make sure they register units every term.
