--- a/viewer.html
+++ b/viewer.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <title>Bootstrap PDF Viewer</title>
-    <meta name="description" content="">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="cleartype" content="on">
-
-    <!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->    
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="">
-    
-    <!-- Twitter Bootstrap -->
-    <link rel="stylesheet" href="lib/twitter-bootstrap/css/bootstrap.css">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
-
+ <head>
+	<title>SystemoneDocs -Systemone Documentation</title>
+	<!-- Meta -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="systemone ltd Software Startups">
+	<meta name="author" content="frankip">
+	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
+	<!-- FontAwesome JS-->
+	<script defer src="assets/fontawesome/js/all.min.js"></script>
+	<!-- Plugins CSS -->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.2/styles/atom-one-dark.min.css">
+	<!-- Theme CSS -->
+	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
     <!-- Bootstrap PDF Viewer -->
-    <link rel="stylesheet" href="css/bootstrap-pdf-viewer.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-pdf-viewer.css">
   </head>
   <body>
 
@@ -33,11 +30,11 @@
     <script src="lib/jquery-1.9.1.js"></script>
 
     <!-- Twitter Bootstrap -->
-    <script src="lib/twitter-bootstrap/js/bootstrap.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
 
     <!-- Bootstrap PDF Viewer -->
-    <script src="lib/pdf.js"></script>
-    <script src="js/bootstrap-pdf-viewer.js"></script>
+    <script src="assets/lib/pdf.js"></script>
+    <script src="assets/js/bootstrap-pdf-viewer.js"></script>
 
     <script>
       var viewer;
