--- a/viewer.html
+++ b/viewer.html
@@ -27,7 +27,7 @@
     <div id="viewer" class="pdf-viewer" data-url="sample.pdf"></div>
 
     <!-- jQuery -->
-    <script src="lib/jquery-1.9.1.js"></script>
+    <script src="assets/lib/jquery-1.9.1.js"></script>
 
     <!-- Twitter Bootstrap -->
     <script src="assets/js/bootstrap.js"></script>
