--- a/viewer.html
+++ b/viewer.html
@@ -30,7 +30,7 @@
     <script src="assets/lib/jquery-1.9.1.js"></script>
 
     <!-- Twitter Bootstrap -->
-    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap PDF Viewer -->
     <script src="assets/lib/pdf.js"></script>
