--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							    <div class="card-text">
 								    Students on teaching practice or attachment.
 							    </div>
-							    <a class="card-link-mask" href="studentunitsregistration.html"></a>
+							    <a class="card-link-mask" href="teachingindex.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
