--- a/Assign_Assessor.html
+++ b/Assign_Assessor.html
@@ -75,7 +75,7 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">1.2 Click on Attachment</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">1.3 Click on Placement</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-4">1.4 Select Attachment Period</a></li>
-				     <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Select Student(s)</a></li>
+				     <li class="nav-item"><a class="nav-link scrollto" href="#item-1-5">1.5 Filter Student(s)</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-6">1.6 Select Student</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-7">1.7 Get all Assessors</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-8">1.8 Assign</a></li>
@@ -139,7 +139,7 @@
 						
 					</section><!--//section-->
 					<section class="docs-section" id="item-1-5">
-						<h2 class="shadow p-3 mb-5 bg-white rounded section-heading">Select Student(s) </h2>
+						<h2 class="shadow p-3 mb-5 bg-white rounded section-heading">Filter Student(s) </h2>
 						<P class="shadow p-3 mb-5 bg-white rounded>Follow the steps :<br/>
 						1.On filter By: Select ATTACHEEID  <BR>
 						2.ENTER ADMISSION NUMBER on search value textbox 
