--- a/Assign_Assessor.html
+++ b/Assign_Assessor.html
@@ -112,7 +112,7 @@
 					
 					<section class="docs-section" id="item-1-3">
 						<h5 class="shadow p-3 mb-5 bg-white rounded section-heading">Click on Placement</h2>
-						<h2 class="p-3 bg-white">Once you are on Attachment interface There are five TABS:<br/>
+						<h2 class="shadow p-3 mb-5 bg-white rounded">Once you are on Attachment interface There are five TABS:<br/>
 						1. REQUESTS<BR>
 						2. ATTACHMENT LETTERS
 							<BR>
