--- a/Assign_Assessor.html
+++ b/Assign_Assessor.html
@@ -89,7 +89,7 @@
 			    <article class="docs-article" id="section-1">
 				    <header class="docs-header">
 					  <h1 class="docs-heading shadow p-3 mb-5 bg-white rounded">Introduction 
-						  <span class="docs-time">Last updated: 2022-05-01</span></h1>
+						  <span class=" p-3 mb-5 docs-time">Last updated: 2022-05-01</span></h1>
 					    <section class="docs-intro">
 						    <p></p>
 					    </section><!--//docs-intro-->
