--- a/Assign_Assessor.html
+++ b/Assign_Assessor.html
@@ -85,7 +85,7 @@
 		    </nav><!--//docs-nav-->
 	    </div><!--//docs-sidebar-->
 	    <div class="docs-content">
-		    <div class="container">
+		   <!-- <div class="container">-->
 			    <article class="docs-article" id="section-1">
 				    <header class="docs-header">
 					  <h1 class="docs-heading shadow p-3 mb-2 bg-white rounded">Introduction 
@@ -226,7 +226,7 @@
 				        </ul><!--//social-list-->
 				    </div>
 			    </footer>
-		    </div> 
+		<!--    </div> -->
 	    </div>
     </div><!--//docs-wrapper-->
     
