--- a/Assign_Assessor.html
+++ b/Assign_Assessor.html
@@ -88,7 +88,7 @@
 		   <!-- <div class="container">-->
 			    <article class="docs-article" id="section-1">
 				    <header class="docs-header">
-					  <h1 class="docs-heading shadow p-3 mb-2 bg-white rounded">Introduction 
+					  <h1 class="docs-heading shadow mb-2 bg-white rounded">Introduction 
 						  <span class=" p-3 mb-2 docs-time">Last updated: 2022-05-01</span></h1>
 					    <section class="docs-intro">
 						    <p></p>
