--- a/schedule_a_index.html
+++ b/schedule_a_index.html
@@ -81,7 +81,7 @@
 							    <div class="card-text">
 								    Schedule termly units.
 							    </div>
-							    <a class="card-link-mask" href="schedule.html"></a>
+							    <a class="card-link-mask" href="unitschedule.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
