--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							    <div class="card-text">
 								Units Scheduling and Lecturer Allocation
 							    </div>
-							    <a class="card-link-mask" href="hr.html"></a>
+							    <a class="card-link-mask" href="schedule_a_index.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
