--- a/unitschedule.html
+++ b/unitschedule.html
@@ -194,6 +194,13 @@
 							Click assign to save
 							</p>
 			 <img src="assets/images/schedule_al/Slide11.JPG" class="rounded img-fluid  p-3 mb-2" />
+													      <img src="assets/images/schedule_al/Slide12.JPG" class="rounded img-fluid  p-3 mb-2" />
+													       <img src="assets/images/schedule_al/Slide13.JPG" class="rounded img-fluid  p-3 mb-2" />
+													        <img src="assets/images/schedule_al/Slide13.JPG" class="rounded img-fluid  p-3 mb-2" />
+														 <img src="assets/images/schedule_al/Slide14.JPG" class="rounded img-fluid  p-3 mb-2" />
+														  <img src="assets/images/schedule_al/Slide15.JPG" class="rounded img-fluid  p-3 mb-2" />
+														   <img src="assets/images/schedule_al/Slide16.JPG" class="rounded img-fluid  p-3 mb-2" />
+														   
 							</div>
 			    </section><!--//section-->
 					
