--- a/viewer.html
+++ b/viewer.html
@@ -24,7 +24,7 @@
   <body>
 
     <!-- Bootstrap PDF Viewer -->
-    <div id="viewer" class="pdf-viewer" data-url="sample.pdf"></div>
+    <div id="viewer" class="pdf-viewer" data-url="Online_Supp_Registration.pdf"></div>
 
     <!-- jQuery -->
     <script src="assets/lib/jquery-1.9.1.js"></script>
