--- a/exams_index.html
+++ b/exams_index.html
@@ -79,7 +79,7 @@
 							        <span class="card-title-text">Marks Computation</span>
 							    </h5>
 							    <div class="card-text">
-								    Schedule termly units.
+								    summation of CATS and End Of Term 
 							    </div>
 							    <a class="card-link-mask" href="markscomputation.html"></a>
 						    </div><!--//card-body-->
@@ -98,7 +98,7 @@
 							        <span class="card-title-text">Marks Grading</span>
 							    </h5>
 							    <div class="card-text">
-								    How to allocate units to a Lecturer(s)</div>
+								    Grading Marks and giving Remarks </div>
 							    <a class="card-link-mask" href="marksgrading.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
@@ -116,7 +116,7 @@
 							        <span class="card-title-text">Departmental/School Awards</span>
 							    </h5>
 							    <div class="card-text">
-								    Schedule and allocation Reports
+								    Staging Graded Exams for Departmental Awards
                   </div>
 							    <a class="card-link-mask" href="departmental_school.html"></a>
 						    </div><!--//card-body-->
@@ -155,7 +155,7 @@
 							        <span class="card-title-text">Final Awards</span>
 							    </h5>
 							    <div class="card-text">
-								    Schedule and allocation Reports
+								    Examination Department final Awards
                   </div>
 							    <a class="card-link-mask" href="schedulereports.html"></a>
 						    </div><!--//card-body-->
