--- a/markscomputation.html
+++ b/markscomputation.html
@@ -67,14 +67,14 @@
 				    
 				    <div class="card shadow-sm">
 					    <div class="card-body">
-						    <section class="docs-section" id="item-1-1">
+						  <!--  <section class="docs-section" id="item-1-1">-->
 							    <div>
 								    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 									    Click on Our Programmes
 								    </h5>
 								    <img src="assets/images/schedule_al/Slide2.JPG" class="rounded img-fluid  p-3" />
 							    </div>
-						    </section><!--//section-->
+						   <!-- </section>//section-->
 					    </div>
 				    </div>
 				    
