--- a/exams_index.html
+++ b/exams_index.html
@@ -113,12 +113,12 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-cogs fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Departmental/School Awards</span>
+							        <span class="card-title-text">Departmental Awards</span>
 							    </h5>
 							    <div class="card-text">
 								    Staging Graded Exams for Departmental Awards
                   </div>
-							    <a class="card-link-mask" href="departmental_school.html"></a>
+							    <a class="card-link-mask" href="marksdepartmentstaging.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
