--- a/exams_index.html
+++ b/exams_index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bootstrap Documentation Template For Software Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="description" content="Campuscura exams Processing">
+    <meta name="author" content="SystemoneLtd Support Team">    
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- Google Font -->
@@ -79,7 +79,7 @@
 							        <span class="card-title-text">Marks Computation</span>
 							    </h5>
 							    <div class="card-text">
-								    summation of CATS and End Of Term 
+								    <h3>summation of CATS and End Of Term </h3>
 							    </div>
 							    <a class="card-link-mask" href="markscomputation.html"></a>
 						    </div><!--//card-body-->
@@ -157,7 +157,7 @@
 							    <div class="card-text">
 								    Examination Department final Awards
                   </div>
-							    <a class="card-link-mask" href="schedulereports.html"></a>
+							    <a class="card-link-mask" href="marksfinalaward.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
