--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 							    </h5>
 							    <div class="card-text">
 								    Cafeteria   </div>
-							    <a class="card-link-mask" href="hr.html"></a>
+							    <a class="card-link-mask" href="cafeteria_index.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col--> 
