--- a/marksprintingcards.html
+++ b/marksprintingcards.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bootstrap Documentation Template For Software Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="description" content="Campuscura Printing Exams Cards ,how to print exams cards in campuscura">
+    <meta name="author" content="systemone support Team">    
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- Google Font -->
@@ -48,7 +48,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-	    <h1 class="page-heading single-col-max mx-auto">Marks Computation Documentation</h1>
+	    <h1 class="page-heading single-col-max mx-auto">Printing Exams Cards Documentation</h1>
 	   <div class="page-intro single-col-max mx-auto"></div>
 	   <div class="main-search-box pt-3 d-block mx-auto">
            <form class="search-form w-100">
@@ -71,7 +71,7 @@
 						    <div>
 							    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 							    </h5>
-							    <img src="assets/images/examProcessing/Slide2.JPG" class="rounded img-fluid  p-3" />
+							    <img src="assets/images/printexamscards/Slide2.JPG" class="rounded img-fluid  p-3" />
 						    </div>
 					    </div>
 				    </div>
@@ -81,7 +81,7 @@
 						    <div>
 							    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 							    </h5>
-							    <img src="assets/images/examProcessing/Slide2.JPG" class="rounded img-fluid  p-3" />
+							    <img src="assets/images/printexamscards/Slide2.JPG" class="rounded img-fluid  p-3" />
 						    </div>
 					    </div>
 				    </div>
@@ -91,7 +91,7 @@
 						    <div>
 							    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 							    </h5>
-							    <img src="assets/images/examProcessing/Slide3.JPG" class="rounded img-fluid  p-3" />
+							    <img src="assets/images/printexamscards/Slide3.JPG" class="rounded img-fluid  p-3" />
 						    </div>
 					    </div>
 				    </div>
@@ -101,7 +101,7 @@
 						    <div>
 							    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 							    </h5>
-							    <img src="assets/images/examProcessing/Slide4.JPG" class="rounded img-fluid  p-3" />
+							    <img src="assets/images/printexamscards/Slide4.JPG" class="rounded img-fluid  p-3" />
 						    </div>
 					    </div>
 				    </div>
@@ -111,7 +111,7 @@
 						    <div>
 							    <h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
 							    </h5>
-							    <img src="assets/images/examProcessing/Slide5.JPG" class="rounded img-fluid  p-3" />
+							    <img src="assets/images/printexamscards/Slide5.JPG" class="rounded img-fluid  p-3" />
 						    </div>
 					    </div>
 				    </div>
