--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							        <span class="card-title-text">Finance Department</span>
 							    </h5>
 							    <div class="card-text">
-								 An Institution's finance department serves a fundamental role in making financial decisions for internal and external affairs. An Institution's activities depend on the competence of an Institution's finance department and the individuals who comprise it. A finance department is organized by, and runs according to, specific roles and duties.  </div>
+								 An Institution's activities depend on the competence of an Institution's finance department and the individuals who comprise it. A finance department is organized by, and runs according to, specific roles and duties.  </div>
 							    <a class="card-link-mask" href="finance_index.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
