--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -66,7 +66,7 @@
 		    <div class="docs-overview py-5">
 			    <div class="row justify-content-center">
 
-					<div class="jumbotron">
+					<div class="jumbotron justify-content-center">
 						<h1 class="display-4">Hello, world!</h1>
 						<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 						<hr class="my-4">
