--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -48,7 +48,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-	    <h1 class="page-heading single-col-max mx-auto">Finance Imprest Documentation</h1>
+	    <h1 class="page-heading single-col-max mx-auto">Finance Online Invoicing Documentation</h1>
 	   <div class="page-intro single-col-max mx-auto"></div>
 	   <div class="main-search-box pt-3 d-block mx-auto">
            <form class="search-form w-100">
@@ -67,12 +67,14 @@
 			    <div class="row justify-content-center">
 
 					<div class="jumbotron justify-content-center">
-						<h1 class="display-4">Hello, world!</h1>
-						<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-						<hr class="my-4">
-						<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+						<h1 class="display-4">Online Invoicing</h1>
 						<p class="lead">
-						  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							Online Inovicing is a new feature in Campuscura.
+						</p>
+						<hr class="my-4">
+						<p>Working online can allow you work from home giving you the much-needed flexibility to spend time with your family. You can plan your schedule so that you have more time for your family than when you have to commute or have to work late in the office.</p>
+						<p class="lead">
+						  <a class="btn btn-primary btn-lg" href="#" role="button">Let us Know if you like the new feature!</a>
 						</p>
 					  </div>
 				    
