--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -67,12 +67,12 @@
 			    <div class="row justify-content-center">
 
 					<div class="jumbotron justify-content-center">
-						<h1 class="display-4">Online Invoicing</h1>
+						<h1 class="display-5 mb-3 pb-4 text-center">Online Invoicing</h1>
 						<p class="lead">
 							Online Inovicing is a new feature in Campuscura.
 						</p>
 						<hr class="my-4">
-						<p>Working online can allow you work from home giving you the much-needed flexibility to spend time with your family. You can plan your schedule so that you have more time for your family than when you have to commute or have to work late in the office.</p>
+						<p>It will allow you work from home giving you the much-needed flexibility to spend time with your family. You can plan your schedule so that you have more time for your family than when you have to commute or have to work late in the office.</p>
 						<p class="lead">
 						  <a class="btn btn-primary btn-lg" href="#" role="button">Let us Know if you like the new feature!</a>
 						</p>
