--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -69,7 +69,7 @@
 					<div class="jumbotron justify-content-center">
 						<h1 class="display-5 mb-3 pb-4 text-center">Online Invoicing</h1>
 						<p class="lead">
-							Online Inovicing is a new feature in Campuscura.
+							Online Invoicing is a new feature in Campuscura.
 						</p>
 						<hr class="my-4">
 						<p>It will allow you work from home giving you the much-needed flexibility to spend time with your family. You can plan your schedule so that you have more time for your family than when you have to commute or have to work late in the office.</p>
