--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -68,12 +68,12 @@
 
 					<div class="jumbotron justify-content-center">
 						<h1 class="display-5 mb-3 pb-4 text-center">Online Invoicing</h1>
-						<p class="lead">
+						<p class="lead text-center">
 							Online Invoicing is a new feature in Campuscura.
 						</p>
-						<hr class="my-4">
+						<hr class="my-4 text-center">
 						<p>It will allow you work from home giving you the much-needed flexibility to spend time with your family. You can plan your schedule so that you have more time for your family than when you have to commute or have to work late in the office.</p>
-						<p class="lead">
+						<p class="lead text-center">
 						  <a class="btn btn-primary btn-lg" href="#" role="button">Let us Know if you like the new feature!</a>
 						</p>
 					  </div>
