--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -70,7 +70,7 @@
 			    <div class="row justify-content-center">
 
 					<div class="jumbotron justify-content-center  shadow-sm mb-2">
-						<h1 class="display-5 mb-3 pb-4 text-center animate__animated animate__bounce">Online Invoicing</h1>
+						<h1 class="display-5 mb-3 pb-4 text-center animate__animated animate__backInDown">Online Invoicing</h1>
 						<p class="lead text-center">
 							Online Invoicing is a new feature in Campuscura.
 						</p>
