--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -51,7 +51,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-	    <h1 class="page-heading single-col-max mx-auto">Finance Online Invoicing Documentation</h1>
+	    <h1 class="page-heading single-col-max mx-auto animate__animated animate__backInDown">Finance Online Invoicing Documentation</h1>
 	   <div class="page-intro single-col-max mx-auto"></div>
 	   <div class="main-search-box pt-3 d-block mx-auto">
            <form class="search-form w-100">
